--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,8 @@ button {
 .shop-list {
 	display: flex;
 	flex-wrap: wrap;
+	margin-left: calc(-1 * 30px);
+	margin-top: calc(-1 * 30px);
 }
 
 .item:focus {
@@ -602,47 +604,51 @@ button {
 }
 
 .shop-item {
-	margin-bottom: 30px;
-	margin-right: 30px;
+	width: calc((100% - 90px) / 3);
+	margin-left: 30px;
+	margin-top: 30px;
+	color: #eeeeee;
+	border: 1px solid #eeeeee;
+	position: relative;
+	overflow: hidden;
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .shop-item:hover {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.shop-item:nth-last-child(-n + 3) {
-	margin-bottom: 0;
-}
-
-.shop-item:nth-child(3n + 3) {
-	margin-right: 0;
-}
-
 .shop-thumb {
 	position: relative;
+	overflow: hidden;
 }
 
-.shop-thumb::after {
-	content: "";
+.shop-thumb > img {
+	display: block;
+	max-width: 100%;
+}
+
+.shop-item-hover {
+	margin: 0;
+	padding: 63px 24px;
 	position: absolute;
 	top: 0;
 	left: 0;
-	display: inline-block;
 	width: 100%;
 	height: 100%;
-	background: rgba(33, 150, 243, 0.9);
-
-	color: #fff;
 	font-size: 18px;
-	line-height: 1.5;
+	line-height: 1.56;
 	letter-spacing: 0.03em;
-	transition: background-color, opacity, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+	color: #fff;
+	background-color: rgba(33, 150, 243, 0.9);
+	transform: translateY(100%);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	opacity: 0;
 }
 
-.shop-thumb:hover::after {
+.shop-item:hover .shop-item-hover {
 	opacity: 1;
+	transform: translateY(0);
 }
 
 .item-title {
@@ -675,6 +681,7 @@ button {
 	top: 0;
 	left: 0;
 	background: rgba(0, 0, 0, 0.2);
+	transition: transform, opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -683,14 +690,32 @@ button {
 }
 
 .modal {
+	display: block;
+	position: absolute;
 	width: 528px;
 	height: 581px;
-	background: #ffffff;
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-
-	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%) scale(1);
+	background-color: #fff;
+	box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+	border-radius: 4px;
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+	display: block;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: #fff;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	margin-top: 8px;
+	margin-left: auto;
+	margin-right: 8px;
+}
+
+.modal-icon {
+	width: 18px;
+	height: 18px;
 }
