--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ button {
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-item::after {
+.studio::after {
 	content: "";
 	position: absolute;
 	top: 43px;
@@ -173,12 +173,18 @@ button {
 	background-color: #2196f3;
 	border-radius: 2px;
 	transition: background-color, opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-	opacity: 0;
 }
 
-.list-item:hover::after {
-	opacity: 1;
+.portfolio::after {
+	content: "";
+	position: absolute;
+	top: 43px;
+	left: 0;
+	height: 4px;
+	width: 100%;
+	background-color: #2196f3;
+	border-radius: 2px;
+	transition: background-color, opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-item:hover {
@@ -571,11 +577,12 @@ button {
 	background-color: #f5f4fa;
 	display: inline-block;
 	margin-left: 8px;
+	border-radius: 4px;
 }
 
 .filter-items {
 	padding: 6px 22px;
-	border-radius: 4px;
+	transition: background-color, color, box-shadow, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-items:last-child {
