--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,10 @@ button {
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.studio {
+	color: #2196f3;
+}
+
 .studio::after {
 	content: "";
 	position: absolute;
@@ -173,6 +177,10 @@ button {
 	background-color: #2196f3;
 	border-radius: 2px;
 	transition: background-color, opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio {
+	color: #2196f3;
 }
 
 .portfolio::after {
